--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url(coffee-cup-latte-art-laptop-corner-green-leaves-white-background-ample-copy-space-suitable-work-home-351906231.webp);
+    background-image: url(banner-bg.webp);
     padding:230px;
     background-size: cover;
     background-repeat: no-repeat;
